# MinimumViableHealthDataspacev2

./: .git-commit-msg.tmp  .git-commit-msg.txt  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  docker-compose.jad-edc018.yml  docker-compose.jad.yml  docker-compose.live.yml  docker-compose.vault-persistent.yml  docker-compose.yml  dump_mocks.js  dump_mocks2.js  health-dataspace-graph-schema.md  planning-health-dataspace-v2.md  renovate.json  typescript
.claude/: settings.json
.github/: CONTRIBUTING.md  copilot-instructions.md
.zap/: rules.tsv
docs/: AGENTIC-AI-explained.md  AGENTIC-DEVELOPMENT-WITH-CLAUDE-CODE.md  EHDS_Patient_Wallet.drawio  FULL_USER_JOURNEY.md  SDLC-explained.md  SDLC.md  architecture-diagrams.md  audit-retention-policy.md  azure-deployment-guide.md  azure-deployment-plan.md  developer-guide.md  e2e-test-report.md  ehds-data-planes.md  gotchas.md  graph-explorer.md  graph-vs-relational-rag.md  health-dataspace-graph-schema.md  onboarding-guide.md  persona-journeys.md  planning-health-dataspace-v2.md  quality-gates.md  simpl-ehds-gap-analysis.md  test-coverage-report.md  test-report.md  user-guide.md
jad/: bootstrap-vault.sh  edcv-agent-config.yaml  identityhub.env  init-postgres.sql  issue-ehds-credentials.sh  issuerservice.env  keycloak-agent-config.yaml  keycloak-realm.json  nats.conf  onboarding-agent-config.yaml  provision-manager-config.yaml  registration-agent-config.yaml  seed-all.sh  seed-contract-negotiation.sh  seed-jad.sh  (+9 more)
scripts/leitlinien/: README.md  category_mapper.py  discover_auth.py  download_s3_pdfs.py  fetch_index.py  load_layer6.py  parse_with_docling.py  pyproject.toml  test_layer6_unit.py
services/catalog-crawler/: Dockerfile  README.md  pyproject.toml
services/catalog-crawler/src/: config.py  dsp_client.py  main.py  metrics.py  models.py  targets.py
services/catalog-crawler/tests/: test_dsp_client.py  test_envelope.py
services/catalog-enricher/: Dockerfile  README.md  pyproject.toml
services/catalog-enricher/src/: config.py  main.py  mapping.py  metrics.py  models.py  neo4j_writer.py
services/catalog-enricher/tests/: test_mapping.py
(+717 files in other folders)
