[project]
name = "leitlinien-ingestion"
version = "0.1.0"
description = "AWMF Leitlinien ingestion pipeline for issue #20 — Phase 1 (discovery / download / Docling parse) and Phase 2 (Neo4j Layer 6 loader) of the EHDS Integration Hub knowledge graph."
requires-python = ">=3.11"
dependencies = [
    "docling>=2.91.0",
    "playwright>=1.58.0",
    "neo4j>=5.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
