[project]
name = "catalog-crawler"
version = "0.1.0"
description = "Periodically fetches DSP dcat:Catalog JSON-LD from each dataspace participant and publishes it to NATS for enrichment. Upstream half of Phase 26 / ADR-020 / issue #8."
requires-python = ">=3.12"
dependencies = [
  "nats-py==2.7.0",
  "neo4j==5.23.0",
  "httpx==0.27.2",
  "pydantic==2.8.2",
  "prometheus-client==0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "respx==0.21.1",
  "ruff==0.6.9",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
